--- a/tic-tac-toe/acceptance/report.html
+++ b/tic-tac-toe/acceptance/report.html
@@ -1552,25 +1552,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,698],[],[[4,0,1,0,[],[1,344,106],[]],[5,0,1,0,[],[1,454,104],[]],[6,0,1,0,[],[1,562,131],[]]],[],[3,3,3,3]];
+window.output["suite"] = [1,2,3,0,[],[0,0,381],[],[[4,0,1,0,[],[0,284,28,5],[]],[6,0,1,0,[],[0,319,22,5],[]],[7,0,1,0,[],[0,348,23,5],[]]],[],[3,0,3,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TicTacToeTests","*C:\\Users\\Cody\\Desktop\\tic-tac-toe\\acceptance\\TicTacToeTests.txt","*TicTacToeTests.txt","*Win Diagonally as X","*Win Horizontally as O","*Force a Tie"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TicTacToeGUITest","*C:\\Users\\Cody\\Desktop\\tic-tac-toe\\acceptance\\TicTacToeGUITest.txt","*TicTacToeGUITest.txt","*Win Diagonally as X","*No keyword with name 'Start Application' found.","*Win Horizontally as O","*Force a Tie"]);
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160904 11:13:44 GMT -05:00";
+window.output["generatedTimestamp"] = "20160908 12:11:44 GMT -05:00";
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 564;
+window.output["generatedMillis"] = 182;
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1473005623436;
+window.output["baseMillis"] = 1473354703818;
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"TicTacToeTests","name":"TicTacToeTests","pass":3}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":3,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":3,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:00","fail":3,"id":"s1","label":"TicTacToeGUITest","name":"TicTacToeGUITest","pass":0}]];
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
